--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "ifrolikov/mailsender",
   "description": "MailSenders tools",
+  "version": "0.0.1",
   "type": "library",
   "repositories": [
     {
