--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "ifrolikov/mailsender",
+  "version": "0.0.1",
   "description": "MailSenders tools",
   "type": "library",
   "require": {
